--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@tensorflow/tfjs-converter": "^4.22.0",
     "@tensorflow/tfjs-core": "^4.22.0",
     "@vueuse/core": "^11.2.0",
+    "@vueuse/motion": "^2.2.6",
     "aos": "^2.3.4",
     "apexcharts": "^4.2.0",
     "axios": "^1.7.7",
